--- a/ID1212Task2/.project
+++ b/ID1212Task2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ID1212Task2</name>
+	<name>Lab_Task_2</name>
 	<comment></comment>
 	<projects>
 	</projects>
