--- a/ID1212Task3/WebContent/WEB-INF/web.xml
+++ b/ID1212Task3/WebContent/WEB-INF/web.xml
@@ -2,12 +2,13 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <servlet>
     <description></description>
-    <display-name>ForumServlet</display-name>
-    <servlet-name>ForumServlet</servlet-name>
-    <servlet-class>servlet.ForumServlet</servlet-class>
+    <display-name>QuizzServlet</display-name>
+    <servlet-name>QuizzServlet</servlet-name>
+    <servlet-class>servlet.QuizzServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>ForumServlet</servlet-name>
-    <url-pattern>/Forum</url-pattern>
+    <servlet-name>QuizzServlet</servlet-name>
+    <url-pattern>/Quizz</url-pattern>
+    <url-pattern>/quizz</url-pattern>
   </servlet-mapping>
 </web-app>
